# wayland-logout

./: LICENSE  README.md  meson.build  meson_options.txt  wayland-logout  wayland-logout.1  wayland-logout.c  wayland-logout.py  wayland-logout.sh
